--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="icon" href="./materials/favv.jpg">
 </head>
 <body>
     <div class="container">
@@ -64,7 +65,7 @@
                 <h1>set up vs code...</h1>
             </div>
         </div>
-        
+
         <div class="replay-section"></div>
         <div class="replay-button nav-button">Replay</div>
         <div class="feature-images-row">
